# chess_bead

./: CITATION.cff  MANIFEST.in  Makefile  README.rst  pyproject.toml  tox.ini
.github/workflows/: build.yml
chess_bead/: __init__.py
docs/: Game.rst  Vis.rst  conf.py  index.rst
example/: Example.ipynb
src/chess_bead/: __init__.py  poems.json
tests/: __init__.py  test_chess.py
